--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -242,7 +242,7 @@
                                 <span><i>{{item.owner}}</i></span>
                             </div>
                             <span flex style="overflow: hidden; text-overflow: ellipsis;"
-                                  title="{{::item.description}}">{{::item.description}}</span>
+                                  title="{{item.description}}">{{item.description}}</span>
 
                             <span style="width: 150px">{{item.verification_state}}</span>
                             <span style="width: 75px"
