--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
                     <md-tooltip>Current Interlock State</md-tooltip>
                 </span>
                 <div style="position: absolute; bottom: 0; left: 0; right: 0" layout="row" layout-align="center center">
-                    <span style="margin: 0 4px;">{{::$root.systemConfig.version.description}}</span>
-                    <span style="margin: 0 4px;">{{::$root.systemConfig.version.deployment_date}}</span>
+                    <span style="margin: 0 4px;">{{$root.systemConfig.version.description}}</span>
+                    <span style="margin: 0 4px;">{{$root.systemConfig.version.deployment_date}}</span>
                     <md-tooltip>CAM System Description and Deployment Date</md-tooltip>
                 </div>
                 <span flex></span>
