--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -18,7 +18,7 @@
                                  class="receptor-state-div md-whiteframe-z2" layout="column"
                                  layout-align="start center">
                     <span style="min-height: 25px; max-width: 140px;" title="Last Changed; Since: {{rec.since}}">{{rec.fromNow}}</span>
-                    <span style="font-size: 26px;" flex><b>{{::rec.name}}</b></span>
+                    <span style="font-size: 26px;" flex><b>{{rec.name}}</b></span>
                     <span class="flash-receptor-state"
                           ng-class="{'receptor-stop-state': vm.sensorValues[rec.name + '_mode'].value === 'STOP', 'receptor-stow-state': vm.sensorValues[rec.name + '_mode'].value === 'STOW'}">
                         <b>{{vm.sensorValues[rec.name + '_mode'].value}}</b>
