--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -75,7 +75,7 @@
                                     <span><i>{{item.owner}}</i></span>
                                 </div>
                                 <span flex style="overflow: hidden; text-overflow: ellipsis;"
-                                      title="{{::item.description}}">{{::item.description}}</span>
+                                      title="{{item.description}}">{{item.description}}</span>
 
                                 <span style="width: 150px">{{item.verification_state}}</span>
                                 <span style="width: 150px" ng-class="{'green-color': item.state === 'ACTIVE'}">{{item.state}}</span>
