--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,5 +1,5 @@
-<div flex layout="column" style="min-width: 1220px; min-height: 400px; margin-top: 4px;"
-     ng-controller="SubArrayResourcesCtrl as vm">
+<div flex layout="column" style="min-width: 1220px; min-height: 400px; margin-top: 4px;"  class="unselectable"
+     ng-controller="SubArrayResourcesCtrl as vm" ng-mouseup="vm.dragSelect = false">
 
     <div flex layout="row" style="margin-top: 16px">
         <div flex layout="column" style="padding: 0 8px">
@@ -97,11 +97,12 @@
                             title="Free Subarray"
                             ng-click="vm.freeSubarray()"></span>
 
-                        <md-menu ng-if="$root.expertOrLO || parentScope.vm.iAmCA" ng-if="vm.subarray.state !== 'active'" md-theme="{{themePrimary}}">
-                            <md-button style="padding: 0; font-size: 24px" class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()">
+                        <md-menu ng-if="$root.expertOrLO || parentScope.vm.iAmCA" md-theme="{{themePrimary}}">
+                            <md-button style="padding: 0; font-size: 24px" class="md-icon-button inline-action-button"
+                                ng-click="vm.initLastKnownConfig();$mdOpenMenu()">
                                 <span class="fa fa-ellipsis-v"></span>
                             </md-button>
-                            <md-menu-content style="min-height: 370px">
+                            <md-menu-content style="min-height: 427px">
                                 <md-menu-item>
                                     <md-button ng-click="parentScope.vm.openBandsDialog($event)"
                                                title="Select a Band">
@@ -112,7 +113,7 @@
                                 <md-menu-item>
                                     <md-button ng-click="parentScope.vm.openProductsDialog($event)"
                                                title="Select a Product">
-                                        <span style="margin-right: 4px" class="fa fa-dropbox"></span>
+                                        <span style="margin-right: 4px" class="fa fa-cube"></span>
                                         Set Product...
                                     </md-button>
                                 </md-menu-item>
@@ -152,6 +153,15 @@
                                                ng-disabled="vm.subarray.state !== 'inactive'">
                                        <span style="margin-right: 4px" class="fa fa-folder-open-o"></span>
                                         Load Resource Template...
+                                    </md-button>
+                                </md-menu-item>
+                                <md-menu-divider></md-menu-divider>
+                                <md-menu-item>
+                                    <md-button ng-click="vm.loadLastKnownSubarrayConfig()"
+                                               title="{{vm.lastKnownSubarrayConfig? vm.lastKnownSubarrayConfig : 'Could not find the last known configuration for any subarrays'}}"
+                                               ng-disabled="!vm.lastKnownSubarrayConfig || vm.subarray.state !== 'inactive'">
+                                       <span style="margin-right: 4px" class="fa fa-cubes"></span>
+                                        Load Last Known Subarray Config
                                     </md-button>
                                 </md-menu-item>
                             </md-menu-content>
@@ -195,25 +205,28 @@
         </md-button>
 
         <div flex layout="column" style="max-width:400px; min-height: 500px; margin-right: 8px">
-
             <div flex layout="column" class="md-whiteframe-z2" style="margin-bottom: 8px;">
                 <md-toolbar class="md-whiteframe-z1" layout="row"
                             layout-align="start center" title="" style="max-height: 40px; min-height: 40px;">
-                <span flex class="md-toolbar-tools unselectable"
-                      style="cursor: pointer; max-height: 32px; padding: 0 4px"
-                      ng-click="vm.selectAllUnassignedResources(true);">Free Resources</span>
-                    <input class="search-input-box" type="search" style="width: 140px;"
+                    <md-tooltip md-visible="vm.showDeselectTooltip" md-direction="top" md-autohide="false">
+                        [esc] to clear selection, [enter] to assign resources
+                    </md-tooltip>
+                    <span flex class="md-toolbar-tools"
+                        title="Click to select or deselect all free resources"
+                        style="cursor: pointer; max-height: 32px; padding: 0 4px"
+                        ng-click="vm.selectAllUnassignedResources(vm.selectedResources.length === 0)">Free Resources</span>
+                    <input class="search-input-box unselectable" type="search" style="width: 140px;"
                            ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Resources..."/>
                 </md-toolbar>
-
-                <!-- TODO selection/drag select -->
-                <!-- TODO stretch buttons to max height -->
                 <div flex style="overflow: auto" layout="column" layout-wrap style="overflow-y: auto">
-                    <div style="max-height: 80px" flex="25" class="resource-item" layout="row" layout-align="start center"
+                    <div style="max-height: 80px; position: relative; cursor: pointer" flex="25" class="resource-item" layout="row" layout-align="start center"
                          ng-repeat="resource in filteredResources = (vm.poolResourcesFree | regexSearch:[{label:'name', value:'name'}]:vm.q | orderBy:'name')"
                          ng-class="{'selected-resource-item': resource.selected, 'maintenance-bg-hover': vm.isResourceInMaintenance(resource), 'faulty-border': vm.isResourceFaulty(resource)}"
-                         ng-click="vm.toggleResourceSelect(resource) && $root.expertOrLO;">
-                        <span class="icon-button fa fa-chevron-left" md-ink-ripple
+                         ng-disabled="!$root.expertOrLO"
+                         ng-mousedown="vm.dragSelect = true; vm.dragSelectUnselect = resource.selected; vm.toggleResourceSelect(resource)"
+                         ng-mouseover="vm.dragSelect && !vm.dragSelectUnselect? vm.toggleResourceSelect(resource, true) : vm.dragSelect && vm.dragSelectUnselect? vm.toggleResourceSelect(resource, false) : ''">
+                        <span md-ink-ripple
+                            class="icon-button fa fa-chevron-left"
                             title="Assign to Subarray"
                             ng-click="vm.assignResource(resource); $event.stopPropagation()"></span>
                         <span flex style="font-size:18px; margin-left: 4px;" class="resource-name"
