--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,7 +1,7 @@
-<div flex layout="column" style="min-width: 1220px; min-height: 400px; margin-top: 4px;"  class="unselectable"
+<div flex layout="column" style="min-width: 1220px; min-height: 400px"  class="unselectable"
      ng-controller="SubArrayResourcesCtrl as vm" ng-mouseup="vm.dragSelect = false">
 
-    <div flex layout="row" style="margin-top: 16px">
+    <div flex layout="row">
         <div flex layout="column" style="padding: 0 8px">
             <div class="subarray-container" layout="row"
                  style="min-width: 450px; position: relative" flex
