replaced svg arrows with font icons; numerous layout tweaks

--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -1,7 +1,7 @@
-<div flex layout="column" style="min-width: 1220px; min-height: 850px; margin-bottom: 8px; margin-top: 4px;" ng-controller="SubArrayObservationsDetail as vm">
+<div flex layout="column" style="min-width: 1220px; min-height: 850px; margin-bottom: 8px;" ng-controller="SubArrayObservationsDetail as vm">
 
-    <div layout="row" flex style="min-width: 1250px; min-height: 850px; margin: 8px 0">
-        <div flex layout="column" style="margin-top: 8px;">
+    <div layout="row" flex style="min-width: 1250px; min-height: 850px">
+        <div flex layout="column">
 
             <div flex style="min-height: 150px;" layout="column" class="md-whiteframe-z1 schedule-list"
                  ng-class="{'md-whiteframe-z1': !vm.selectedSchedule, 'whiteframe-z1-left': vm.selectedSchedule}">
