--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -1,7 +1,7 @@
-<div flex layout="column" style="min-width: 1260px; min-height: 500px; max-height: 100%; margin: 8px 0"
+<div flex layout="column" style="min-width: 1260px; min-height: 500px"
      ng-controller="SbDraftsCtrl as vm">
 
-    <div flex layout="row" style="margin: 8px; max-height: 100%; min-height: 100%;">
+    <div flex layout="row" style="margin: 0 8px">
         <div class="md-whiteframe-z2" layout="column" flex>
             <md-toolbar class="md-whiteframe-z1">
                 <div layout="row" class="unselectable">
