--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -1,8 +1,8 @@
-<div flex layout="column" style="min-width: 1015px; min-height: 860px; margin-top: 8px;"
+<div flex layout="column" style="min-width: 1015px; min-height: 860px;"
      ng-controller="SubArrayExecutorOverview as vm">
 
-    <div flex layout="row" style="margin-top: 8px">
-        <div flex layout="column" style="overflow: auto; padding-left: 8px; padding-right: 8px;">
+    <div flex layout="row">
+        <div flex layout="column" style="overflow: auto; padding: 0 8px">
             <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2"
                  layout="row" flex
                  style="min-width: 650px;" md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
