--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -9,7 +9,8 @@
                         md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                         ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z1"
                         layout="row" layout-align="center center" title="{{vm.subarray.description}}"
-                        style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px">
+                        style="max-height: 64px; min-height: 64px; position: relative;">
+                        <div ng-include="'app/scheduler/templates/subarray-config-container.html'"></div>
                         <md-menu style="margin: 0; padding: 0;">
                             <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdOpenMenu(); $event.stopPropagation()"
                                 style="color: currentColor !important; font-size: inherit">
@@ -27,58 +28,7 @@
                                 </md-menu-item>
                             </md-menu-content>
                         </md-menu>
-                        <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 7px; left: 0; right: 0; font-size: 12px">
-                            <md-menu style="margin: 0; padding: 0;">
-                                <md-button ng-disabled="!$root.expertOrLO" class="subarray-config-menu-button" title="Control Authority" ng-click="$mdOpenMenu()"
-                                    style="color: currentColor !important">
-                                    <i>CA: </i><b>{{vm.subarray.delegated_ca}}</b>
-                                </md-button>
-                                <md-menu-content style="padding: 8px;">
-                                    <md-menu-item>
-                                        <md-button ng-click="parentScope.vm.delegateControl('lo')">
-                                            <span>Lead Operator</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                    <md-menu-item ng-repeat="user in parentScope.vm.users | orderBy:'email' track by $index">
-                                        <md-button ng-click="parentScope.vm.delegateControl(user.email)">
-                                            <span>{{user.email}}</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
-                            <md-menu style="margin: 0; padding: 0;">
-                                <md-button ng-disabled="!$root.expertOrLO" class="subarray-config-menu-button" title="Selected Band" ng-click="$mdOpenMenu(); $event.stopPropagation()"
-                                    style="color: currentColor !important">
-                                    <i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b>
-                                </md-button>
-                                <md-menu-content style="padding: 8px;">
-                                    <md-menu-item ng-repeat="band in parentScope.vm.bands | orderBy:band track by $index">
-                                        <md-button ng-click="parentScope.vm.setBand(band)">
-                                            <span>{{band}}</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
-                            <md-menu style="margin: 0; padding: 0;">
-                                <md-button ng-disabled="!$root.expertOrLO" class="subarray-config-menu-button" title="Selected Product" ng-click="$mdOpenMenu(); $event.stopPropagation()"
-                                    style="color: currentColor !important">
-                                    <i>Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
-                                </md-button>
-                                <md-menu-content style="padding: 8px;">
-                                    <md-menu-item>
-                                        <md-button ng-click="parentScope.vm.setProduct('')">
-                                            <span>None</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                    <md-menu-item ng-repeat="product in parentScope.vm.products | orderBy:product:true track by $index">
-                                        <md-button ng-click="parentScope.vm.setProduct(product)">
-                                            <span>{{product}}</span>
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
-                            <span ng-show="vm.subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b></span>
-                        </div>
+
                         <span flex></span>
                         <md-button ng-show="$root.expertOrLO || parentScope.vm.iAmCA" class="md-icon-button inline-action-button" ng-click="vm.freeSubarray()"
                                    title="Free Subarray">
